# binance-cli

./: pyproject.toml
binance_cli/: __init__.py  binance_client.py  main.py
tests/: test_binance_cli.py
